# master_project

./: .gitignore  README.md  log_timeline  todo
Report/: masterProjectIllustration(1).drawio
Report/Head/: Bibliography.bib  Report.tex  Setup.sty  Titlepage.tex
Report/Sections/: Materials_and_methods.tex  contact_information.tex  introduction.tex  raspberrypi.tex
blender_models/: simulation_entrance_aruco_big_board_full.blend  simulation_entrance_aruco_big_board_full.blend1  simulation_entrance_aruco_big_board_onepattern.blend  simulation_entrance_aruco_big_board_onepattern.blend1  simulation_entrance_aruco_big_board_onepattern_error.blend  simulation_entrance_aruco_big_board_onepattern_error.blend1  simulation_entrance_aruco_big_board_threepattern.blend  simulation_entrance_aruco_big_board_threepattern.blend1  simulation_entrance_aruco_big_board_threepattern_error.blend  simulation_entrance_aruco_big_board_threepattern_error.blend1  simulation_entrance_aruco_board.blend  simulation_entrance_aruco_board.blend1  simulation_entrance_aruco_board_new.blend  simulation_entrance_aruco_board_new.blend1  simulation_entrance_aruco_board_single.blend  simulation_entrance_aruco_board_single.blend1  simulation_entrance_aruco_board_single_flipped.blend  simulation_entrance_aruco_board_single_flipped.blend1  untitled.blend
blender_models/blender_models/: simulation_entrance_aruco_big_board_full.blend  simulation_entrance_aruco_big_board_full.blend1  simulation_entrance_aruco_big_board_onepattern.blend  simulation_entrance_aruco_big_board_onepattern.blend1  simulation_entrance_aruco_big_board_onepattern_error.blend  simulation_entrance_aruco_big_board_onepattern_error.blend1  simulation_entrance_aruco_big_board_onepattern_missing_markers.blend  simulation_entrance_aruco_big_board_onepattern_missing_markers.blend1  simulation_entrance_aruco_big_board_onepattern_missing_markers_wear.blend  simulation_entrance_aruco_big_board_onepattern_missing_markers_wear.blend1  simulation_entrance_aruco_big_board_threepattern.blend  simulation_entrance_aruco_big_board_threepattern_error.blend
camera calibration/: CheckerboardCreator.py  chessboard_calibration.py
data/: GPS2Vision_aruco_pose_estimation.txt  aruco_pose_estimation.txt  aruco_pose_estimation_rolling_average.txt  aruco_pose_estimation_rolling_statistics.txt  gps2vision.txt  graphics_plot.py  hold_pose_using_aruco_pose_estimation.txt  imu_vision_data.txt  sensor_fusion_data.txt  tests_in_general  vision_landing_precision_and_accuracy.txt
data/GPS2Vision_aruco_pose_estimation/: graphics_plot.py
data/analyse_GPS2Vision/: .plot_data.py.un~  .plot_test_data.py.un~  plot_data.py  plot_data.py~  plot_test_data.py  plot_test_data.py~  test12.txt  test22.txt  test23.txt  test25.txt  test26.txt  test27.txt  test28.txt  test29.txt  test30.txt
data/analyse_GPS2Vision_aruco_pose_estimation/: graphics_plot.py
data/analyse_aruco_pose_estimation/: plot_data.py  plot_test_data.py
data/analyse_hold_pose_using_aruco_pose_estimation/: plot_data.py  plot_data.py~  plot_test_data.py  plot_test_data.py~
data/analyse_rolling_statistics/: 2q  analyse_rolling_statistics.py
data/analyse_sensor_fusion/: plot_data.py  plot_fusion_data.py
data/aruco_markers/: print_markers.py
missions/: GPS2Vision_test.txt  GPS2Vision_test_landing3.txt  mission1.txt  mission2.txt  mission3.txt  mission4.txt  mission_reader.py  mission_test.txt
software/ros_workspace/src/mavlink_lora/: CMakeLists.txt  package.xml  readme.txt  setup.py
software/ros_workspace/src/mavlink_lora/include/: checksum.h  mavlink_lora_lib.hpp  mavlink_messages.hpp  serial.h
software/ros_workspace/src/mavlink_lora/launch/: mavlink_lora.launch  mavlink_lora_sim.launch
software/ros_workspace/src/mavlink_lora/msg/: mavlink_lora_altitude.msg  mavlink_lora_attitude.msg  mavlink_lora_command_message_interval.msg  mavlink_lora_command_reposition.msg  mavlink_lora_command_takeoff.msg  mavlink_lora_enable_offboard.msg  mavlink_lora_extended_sys_status.msg  mavlink_lora_home_position.msg  mavlink_lora_mission_list.msg  mavlink_lora_msg.msg  mavlink_lora_pos.msg  mavlink_lora_status.msg
software/ros_workspace/src/mavlink_lora/scripts/: arm_drone.py  gcs_keypress.py  gcs_simple.py  land.py  message_interval.py  mission_clear_all.py  mission_download.py  mission_lib.py  mission_set_current.py  mission_start.py  param_list_get.py  pause_continue.py  print_rssi.py  req_data_stream.py  set_mode.py  set_offboard_setpoint.py  show_pos.py  show_rssi.py  takeoff.py  test_messages.py  upload_mission.py  upload_mission_healthdrone.py  upload_mission_over_20.py
software/ros_workspace/src/mavlink_lora/src/: mavlink_lora_lib.cpp  mavlink_lora_node.cpp  serial.c
software/ros_workspace/src/mavlink_msgs/: CMakeLists.txt  package.xml
software/ros_workspace/src/mavlink_msgs/msg/: mavlink_lora_aruco.msg  mavlink_lora_battery_status.msg  mavlink_lora_command_ack.msg  mavlink_lora_command_land.msg  mavlink_lora_command_long.msg  mavlink_lora_command_set_mode.msg  mavlink_lora_command_start_mission.msg  mavlink_lora_gps_raw.msg  mavlink_lora_heartbeat.msg  mavlink_lora_mission_ack.msg  mavlink_lora_mission_item_int.msg  mavlink_lora_radio_status.msg  mavlink_lora_set_position_target_local_ned.msg  mavlink_lora_status.msg  mavlink_lora_statustext.msg  mavlink_lora_system_time.msg  mavlink_lora_vibration.msg
(+548 files in other folders)
