<?xml version="1.0"?>
<package format="2">
  <name>mavlink_lora</name>
  <version>2.0.0</version>
  <description>Mavlink_lora package is for long range communication with drones using the LoRa protocol. It works as a libary and wrapper between the mavlink protocol and other systems</description>

  <maintainer email="fm@mmmi.sdu.dk">Frederik Mazur Andersen</maintainer>
  <license>BSD 3-Clause</license>
 
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>rospy</depend>
  <depend>mavlink_msgs</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>
</package>
