<?xml version="1.0"?>
<package format="2">
  <name>mavlink_msgs</name>
  <version>1.0.0</version>
  <description>
    mavlink_msgs defines the common mavlink messages used internaly in the system on both mission-computer and GCS.
  </description>
  <maintainer email="fm@mmmi.sdu.dk">Frederik Mazur Andersen</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>'
  <build_depend>std_msgs</build_depend>
  
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
